--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-OPENAI_API_KEY="OPEN_AI_API_KEY"
+# This is the API key provided by OpenAI. You can get this key from your OpenAI account.
+# It is used to authenticate your application's requests to the OpenAI API.
+OPENAI_API_KEY=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
+
+
+
+# This is the ID of the assistant that your application will use.
+# You can get this ID from your OpenAI account.
+# If this value is set, the application will use this assistant for the chat.
+# If this value is not set, the application will prompt the user to enter the assistant details.
+NEXT_PUBLIC_REACT_APP_ASSISTANT_ID=asst_PxqTqXPPKWGpIpTr2wqcv6Sy
