--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.3",
     "dotenv": "^16.3.1",
-    "next": "13.4.19",
+    "mui": "^0.0.1",
+    "next": "^14.0.4",
     "openai": "^4.17.5",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
